Changes to blog set up

--- a/my-portfolio/content/hello.mdx
+++ b/my-portfolio/content/hello.mdx
@@ -1,8 +1,8 @@
 ---
 title: My First Post
-date: 2023-05-19
+publishedAt: '2023-05-24'
+summary: 'My first post'
 ---
-
 Hey, How's it going! My Name is Robert. This is will be the start to my journey to becoming a Software Developer!
 Hopefully I can keep this up with keeping you updated on all things I am learning/ working towards. But to always to be real place where I can share my thoughts on the current job market. And It is not looking good If I am being honest with you.  
 
